fix text wrap on page 1 and 3

--- a/public/css/hal3.css
+++ b/public/css/hal3.css
@@ -135,6 +135,19 @@
     bottom: 1.5em;
 }
 
+#sec-1 #headline .tittle-left {
+    margin-top: 0.5em;
+    width: 100%;
+    height: 2.5em;
+    overflow: hidden;
+}
+
+#sec-1 #headline .desc-left {
+    width: 100%;
+    height: 3em;
+    overflow: hidden;
+}
+
 #sec-1 #headline .col {
     display: flex;
     flex-direction: column;
@@ -187,6 +200,12 @@
     object-fit: cover;
     background-color: black;
     border-radius: 0.5em;
+}
+
+#sec-1 #headline .desc-right {
+    width: 100%;
+    height: 3em;
+    overflow: hidden;
 }
 
 /* lastest */
